MainApplication: Added method for getting url to fxml files for tests; AuthenticationScreeController: Implemented testing of error messages on unsuccessful login; Successful login testing implemented;